--- a/course-04/project/c4-final-project-starter-code/backend/package.json
+++ b/course-04/project/c4-final-project-starter-code/backend/package.json
@@ -11,6 +11,8 @@
     "jsonwebtoken": "^8.5.1",
     "middy": "^0.27.1",
     "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "uuid": "^3.4.0",
     "winston": "^3.8.2"
   },
@@ -18,7 +20,8 @@
     "@types/aws-lambda": "^8.10.109",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^10.17.60",
-    "aws-sdk": "^2.1290.0",
+    "@types/source-map-support": "^0.5.6",
+    "aws-sdk": "^2.1293.0",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-plugin-canary-deployments": "^0.4.8",
@@ -26,7 +29,7 @@
     "serverless-reqvalidator-plugin": "^1.0.4",
     "serverless-webpack": "^5.11.0",
     "ts-loader": "^5.4.5",
-    "typescript": "^4.9.4",
+    "typescript": "^4.6.4",
     "webpack": "^4.46.0"
   },
   "author": "Ivan Mushketyk",
