--- a/course-04/project/c4-final-project-starter-code/backend/serverless.yml
+++ b/course-04/project/c4-final-project-starter-code/backend/serverless.yml
@@ -26,9 +26,9 @@ provider:
   # Use these variables in the functions and resouorces section below. For example, 
   # ${self:provider.environment.ATTACHMENT_S3_BUCKET}
   environment:
-    TODOS_TABLE: serverless-todo-app-${self:provider.stage}
+    TODOS_TABLE: Todos-${self:provider.stage}
     TODOS_CREATED_AT_INDEX: CreatedAtIndex
-    ATTACHMENT_S3_BUCKET: serverless-todo-app-images-${self:provider.stage}
+    ATTACHMENT_S3_BUCKET: serverless-c4-todo-images-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
     PROJECT_NAME: serverless-todo-app
     INDEX_NAME: ${self:provider.environment.TODOS_CREATED_AT_INDEX}
@@ -70,6 +70,13 @@ functions:
           path: /
           method: get
           reqvalidatorName: RequestBodyValidator
+      # - s3:
+      #     bucket: ${self:provider.environment.ATTACHMENT_S3_BUCKET}
+      #     event: s3:ObjectCreated:*
+      #     rules:
+      #       - prefix: serverless/
+      #       - suffix: .zip .json
+      #     existing: true
           
 
   Auth:
