update serverless.yml file, modify BucketPolicy to check the Bucket Ppolicy error on deployment

--- a/course-04/project/c4-final-project-starter-code/backend/serverless.yml
+++ b/course-04/project/c4-final-project-starter-code/backend/serverless.yml
@@ -28,7 +28,7 @@ provider:
   environment:
     TODOS_TABLE: Todos-${self:provider.stage}
     TODOS_CREATED_AT_INDEX: CreatedAtIndex
-    ATTACHMENT_S3_BUCKET: serverless-c4-todo-images-${self:provider.stage}
+    ATTACHMENT_S3_BUCKET: serverless-c4-todo-images-okeoma-1801-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
     PROJECT_NAME: serverless-todo-app
     INDEX_NAME: ${self:provider.environment.TODOS_CREATED_AT_INDEX}
@@ -280,7 +280,10 @@ resources:
         BucketName: ${self:provider.environment.ATTACHMENT_S3_BUCKET}
         CorsConfiguration:
           CorsRules:
-            - AllowedHeaders:
+            - 
+              AllowedOrigins:
+                - '*'
+              AllowedHeaders:
                 - '*'
               AllowedMethods:
                 - GET
@@ -288,8 +291,6 @@ resources:
                 - POST
                 - DELETE
                 - HEAD
-              AllowedOrigins:
-                - '*'
               MaxAge: 3000
 
     # TODO: Complete the policy below and attach it to the bucket defined above
@@ -299,13 +300,11 @@ resources:
       Properties:
         PolicyDocument:
           Id: MyPolicy
-          Version: 2012-10-17
+          Version: "2012-10-17"
           Statement:
             - Sid: PublicReadForGetBucketObjects
               Effect: Allow
               Principal: '*'
-              Action:
-                - 's3:GetObject'
-              Resource:
-                - 'arn:aws:s3:::${self:provider.environment.ATTACHMENT_S3_BUCKET}/*'
+              Action: 's3:GetObject'
+              Resource: 'arn:aws:s3:::${self:provider.environment.ATTACHMENT_S3_BUCKET}/*'
         Bucket: !Ref AttachmentsBucket
