--- a/course-04/project/c4-final-project-starter-code/backend/serverless.yml
+++ b/course-04/project/c4-final-project-starter-code/backend/serverless.yml
@@ -43,7 +43,6 @@ provider:
         - Effect: Allow
           Action:
             - xray:PutTelemetryRecords
-            - xray:PutTraceSegments
           Resource: "*"
 
 custom:
@@ -53,13 +52,13 @@ custom:
         version: 1.0.0
         title: Serverless Todo App
         description: This is a serverless todo app
-      models:
-        - name: CreateTodoRequest
-          contentType: application/json
-          schema: ${file(models/create-todo-model.json)}
-        - name: UpdateTodoRequest
-          contentType: application/json
-          schema: ${file(models/update-todo-model.json)}
+    models:
+      - name: CreateTodoRequest
+        contentType: application/json
+        schema: ${file(models/create-todo-model.json)}
+      - name: UpdateTodoRequest
+        contentType: application/json
+        schema: ${file(models/update-todo-model.json)}
 
 
 functions:
@@ -114,6 +113,12 @@ functions:
           path: todos
           cors: true
           authorizer: Auth
+          reqvalidatorName: RequestBodyValidator
+          documentation:
+            summary: Create a new todo task
+            description: Create a todo task
+            requestModels:
+              'application/json': CreateTodoRequest
     iamRoleStatementsName: ${self:provider.environment.PROJECT_NAME}-create-todo-role-${self:provider.stage}
     iamRoleStatements:
       - Effect: Allow
@@ -137,6 +142,11 @@ functions:
           cors: true
           authorizer: Auth
           reqvalidatorName: RequestBodyValidator
+          documentation:
+            summary: Update a new todo task
+            description: Update a todo task
+            requestModels:
+              'application/json': UpdateTodoRequest
     iamRoleStatementsName: ${self:provider.environment.PROJECT_NAME}-update-todo-role-${self:provider.stage}
     iamRoleStatements:
       - Effect: Allow
