--- a/course-04/project/c4-final-project-starter-code/backend/serverless.yml
+++ b/course-04/project/c4-final-project-starter-code/backend/serverless.yml
@@ -68,7 +68,7 @@ functions:
       - http:
           path: /
           method: get
-          reqvalidatorName: RequestBodyValidator
+          reqValidatorName: RequestBodyValidator
           
   Auth:
     handler: src/lambda/auth/auth0Authorizer.handler
@@ -79,7 +79,7 @@ functions:
     handler: src/lambda/http/getTodos.handler
     events:
       - http:
-          reqvalidatorName: RequestBodyValidator
+          reqValidatorName: RequestBodyValidator
           method: get
           path: todos
           cors: true
@@ -113,7 +113,7 @@ functions:
           path: todos
           cors: true
           authorizer: Auth
-          reqvalidatorName: RequestBodyValidator
+          reqValidatorName: RequestBodyValidator
           documentation:
             summary: Create a new todo task
             description: Create a todo task
@@ -141,7 +141,7 @@ functions:
           path: todos/{todoId}
           cors: true
           authorizer: Auth
-          reqvalidatorName: RequestBodyValidator
+          reqValidatorName: RequestBodyValidator
           documentation:
             summary: Update a new todo task
             description: Update a todo task
@@ -169,6 +169,7 @@ functions:
           path: todos/{todoId}
           cors: true
           authorizer: Auth
+          reqValidatorName: RequestBodyValidator
     iamRoleStatementsName: ${self:provider.environment.PROJECT_NAME}-delete-todo-role-${self:provider.stage}
     iamRoleStatements:
       - Effect: Allow
@@ -191,6 +192,7 @@ functions:
           path: todos/{todoId}/attachment
           cors: true
           authorizer: Auth
+          reqValidatorName: RequestBodyValidator
     iamRoleStatementsName: ${self:provider.environment.PROJECT_NAME}-generate-upload-url-role-${self:provider.stage}
     iamRoleStatements:
       - Effect: Allow
@@ -215,18 +217,18 @@ resources:
     # Feel free to change the names as you like. 
 
     GatewayResponseDefault4XX:
-      Type: AWS::ApiGateway::GatewayResponse
+      Type: 'AWS::ApiGateway::GatewayResponse'
       Properties:
         ResponseParameters:
           gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
           gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
-          gatewayresponse.header.Access-Control-Allow-Methods: "'OPTIONS,GET,POST'"
+          gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST'"
         ResponseType: DEFAULT_4XX
         RestApiId:
-          Ref: ApiGatewayRestApi
+          Ref: 'ApiGatewayRestApi'
 
     GatewayResponseDefault5XX:
-      Type: AWS::ApiGateway::GatewayResponse
+      Type: 'AWS::ApiGateway::GatewayResponse'
       Properties:
         ResponseParameters:
           gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
@@ -234,14 +236,14 @@ resources:
           gatewayresponse.header.Access-Control-Allow-Methods: "'OPTIONS,GET,PUT,POST,PATCH,DELETE'"
         ResponseType: DEFAULT_5XX
         RestApiId:
-          Ref: ApiGatewayRestApi
+          Ref: 'ApiGatewayRestApi'
 
     RequestBodyValidator:
-      Type: AWS::ApiGateway::RequestValidator
+      Type: 'AWS::ApiGateway::RequestValidator'
       Properties:
         Name: RequestBodyValidator
         RestApiId:
-          Ref: ApiGatewayRestApi
+          Ref: 'ApiGatewayRestApi'
         ValidateRequestBody: true
         ValidateRequestParameters: false
     
